<?xml version="1.0"?>
<project
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>health.medunited</groupId>
  <artifactId>base</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>


  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <olingo.version>2.0.12</olingo.version>
    <failOnMissingWebXml>false</failOnMissingWebXml>
  </properties>
  <dependencies>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
      <version>8.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.microprofile.metrics</groupId>
      <artifactId>microprofile-metrics-api</artifactId>
      <version>3.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-core</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-api</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-jpa-processor-api</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-jpa-processor-core</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-api-annotation</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.5.0</version>
    </dependency>
    <dependency>
      <groupId>jakarta.enterprise</groupId>
      <artifactId>jakarta.enterprise.cdi-api</artifactId>
      <version>4.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.ws</groupId>
      <artifactId>jaxws-rt</artifactId>
      <version>2.3.4</version>
    </dependency>
    <dependency>
      <groupId>health.ere</groupId>
      <artifactId>api-telematik-service</artifactId>
      <version>OPD4-20230404</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/javax.json.bind/javax.json.bind-api -->
    <dependency>
      <groupId>javax.json.bind</groupId>
      <artifactId>javax.json.bind-api</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk15on</artifactId>
      <version>1.60</version>
    </dependency>
    <dependency>
      <groupId>org.jboss.weld.se</groupId>
      <artifactId>weld-se-core</artifactId>
      <version>5.0.1.Final</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.weld</groupId>
      <artifactId>weld-junit5</artifactId>
      <version>4.0.0.Final</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.4</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>openui5</artifactId>
      <version>1.115.0</version>
    </dependency>
    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-client</artifactId>
      <version>4.7.7.Final</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-jackson2-provider</artifactId>
      <version>4.7.7.Final</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>1.1.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.3.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
  <build>
    <finalName>ROOT</finalName>
    <plugins>
      <plugin>
        <groupId>org.wildfly.plugins</groupId>
        <artifactId>wildfly-maven-plugin</artifactId>
        <version>4.0.0.Final</version>
        <configuration>
          <fork>true</fork>
          <feature-pack-location>
            wildfly@maven(org.jboss.universe:community-universe):current/beta#26.1.3.Final
          </feature-pack-location>
          <serverConfig>../../../../wildfly-configuration/standalone.xml</serverConfig>
          <!--
             <command>/extension=org.wildfly.extension.microprofile.metrics-smallrye:add</command>
          -->
          <java-opts>
            <java-opt>--add-opens=java.base/java.lang=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.io=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.security=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.management/javax.management=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.naming/javax.naming=ALL-UNNAMED</java-opt>
            <java-opt>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n</java-opt>
          </java-opts>
          <server-args>
            <server-arg>-Djboss.https.port=8444</server-arg>
          </server-args>
          <add-user>
            <users>
              <user>
                <username>admin</username>
                <password>admin</password>
              </user>
            </users>
          </add-user>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
          <argLine>--add-opens=java.base/java.javax=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <!-- git clone https://github.com/ere-health/api-telematik -->
      <!-- cd api-telematik && mvn install -->
      <!-- cd <some-local-path>/ere-ps-app/project-repo -->
      <!-- cp -r ~/.m2/repository/health/  -->
      <id>project-repo</id>
      <releases>
        <checksumPolicy>ignore</checksumPolicy>
      </releases>
      <url>file://${project.basedir}/project-repo</url>
    </repository>
  </repositories>
</project>
